<resources>
    <string name="app_name">TaroGame</string>
    <string name="your_question">Введите ваш вопрос!</string>
    <string name="buttonAskQuestion">Задать вопрос</string>
    <string name="textViewQuestion">Задайте ваш вопрос</string>
    <string name="choose_cards">Выберете карты</string>
    <string name="shuffle">Перетасовать</string>
    <string name="сard_interpretation">Толкование вашых карт</string>
    <string name="reset">Сбросить</string>
    <string name="your_cvestions">Введите ваш вопрос</string>
    <string name="find_answer">Узнать ответ</string>
    <string name="image">Картинка</string>
    <string name="your_choice">Ваш Выбор</string>
    <string name="exit">Выйти</string>
    <string name="your_question_title">Добро пожаловать за завесу тайн.\nВы хотите узнать свою судьбу?</string>
    <string name="question">Задайте ваш вопрос...</string>
    <string name="choose_layout">Выберете расклад</string>
    <string name="map_day">Карта дня</string>
    <string name="cross">Крест</string>
    <string name="three_cards">Три карты</string>
    <string name="choose">Выбрать</string>
</resources>