<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThreeCards">

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.55" />

  <ImageView
      android:id="@+id/imageViewTitle"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:adjustViewBounds="true"
      android:scaleType="centerCrop"
      app:layout_constraintBottom_toTopOf="@+id/imageViewTitle2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/preluchshie"
      android:contentDescription="@string/image" />

  <ImageView
      android:id="@+id/imageViewTitle2"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:adjustViewBounds="true"
      android:scaleType="centerCrop"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.493"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline2"
      app:srcCompat="@drawable/caled"
      android:contentDescription="@string/image" />

  <TextView
      android:id="@+id/textViewСhooseСards"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:text="@string/choose_cards"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="32sp"
      android:textStyle="bold"
      android:fontFamily="serif"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/imageViewTitle" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerViewThreeMyCards"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="8dp"
      app:layout_constraintBottom_toTopOf="@+id/guideline2"
      app:layout_constraintEnd_toEndOf="@+id/imageViewTitle"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewСhooseСards" />

  <TextView
      android:id="@+id/textViewNumberOfCards"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/your_choice"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="32sp"
      android:textStyle="bold"
      android:fontFamily="serif"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/guideline2" />

  <Button
      android:id="@+id/buttonThreeResult"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:backgroundTint="#996A3F12"
      android:text="@string/find_answer"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/imageViewTitle2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textViewCardSelection1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="serif"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="12sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/imageViewThree1"
      app:layout_constraintStart_toStartOf="@+id/imageViewThree1"
      app:layout_constraintTop_toBottomOf="@+id/textViewNumberOfCards" />

  <TextView
      android:id="@+id/textViewCardSelection2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="serif"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="12sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/imageViewThree2"
      app:layout_constraintStart_toStartOf="@+id/imageViewThree2"
      app:layout_constraintTop_toBottomOf="@+id/textViewNumberOfCards" />

  <TextView
      android:id="@+id/textViewCardSelection3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="serif"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="12sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/imageViewThree3"
      app:layout_constraintStart_toStartOf="@+id/imageViewThree3"
      app:layout_constraintTop_toBottomOf="@+id/textViewNumberOfCards" />

  <ImageView
      android:id="@+id/imageViewThree1"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toTopOf="@+id/buttonThreeResult"
      app:layout_constraintEnd_toStartOf="@+id/imageViewThree2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewCardSelection1"
      app:layout_constraintVertical_bias="0.51"
      app:srcCompat="@drawable/revers"
      android:contentDescription="@string/image" />

  <ImageView
      android:id="@+id/imageViewThree2"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toTopOf="@+id/buttonThreeResult"
      app:layout_constraintEnd_toStartOf="@+id/imageViewThree3"
      app:layout_constraintStart_toEndOf="@+id/imageViewThree1"
      app:layout_constraintTop_toBottomOf="@+id/textViewCardSelection2"
      app:srcCompat="@drawable/revers"
      android:contentDescription="@string/image" />

  <ImageView
      android:id="@+id/imageViewThree3"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toTopOf="@+id/buttonThreeResult"
      app:layout_constraintEnd_toEndOf="@+id/imageViewTitle2"
      app:layout_constraintStart_toEndOf="@+id/imageViewThree2"
      app:layout_constraintTop_toBottomOf="@+id/textViewCardSelection3"
      app:srcCompat="@drawable/revers"
      android:contentDescription="@string/image" />

</androidx.constraintlayout.widget.ConstraintLayout>